# cathartic

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  security_vulnerability.yaml
cathartic/: __init__.py  __main__.py  cli.py  gui.py  menu.py
cathartic/core/: actions.py  registry.py  scanner.py  types.py
cathartic/scanners/: duplicates.py  empty_dirs.py  large_files.py  old_files.py  pkg_cache.py  remnants.py  temp_cache.py
cathartic/utils/: hasher.py  platform.py  size.py  walk.py
