[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cathartic"
version = "0.1.0"
description = "Cross-platform PC cleaner - scan storage, find junk, clean with consent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "send2trash>=1.8",
    "questionary>=2.0",
]

[project.scripts]
cathartic = "cathartic.menu:main"

[tool.hatch.build.targets.wheel]
packages = ["cathartic"]
